objects/Guardant_360_Sample__c.object
<CustomObject>
    <fields>
        <fullName>MDACC_Accession__c</fullName>
        <formula>Name + &quot; - &quot; + Patient__r.MRN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accession - MRN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD_Replied_to_Stale_Tester_contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NS:08/14/18 This field is used to track the Stale Tester alert process</description>
        <label>MD Replied to Stale Tester contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MR_Match_Key__c</fullName>
        <description>Derived from Match Record</description>
        <label>MR Match Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MR_Match_Record_Update__c</fullName>
        <inlineHelpText>When was the most recent time this sample was updated by a Match Record?</inlineHelpText>
        <label>MR Match Record Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MR_Patient_Initials__c</fullName>
        <description>Derived from MR</description>
        <label>MR Patient Initials</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MR_Qualifying_Target_Alterations__c</fullName>
        <description>Is written to by a sample&apos;s Match Record.</description>
        <label>MR Qualifying Target Gene</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MR_Update_Date__c</fullName>
        <formula>DATEVALUE(MR_Match_Record_Update__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MR Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MSL_1st_Sample_Notification__c</fullName>
        <description>Date field will populate when the email notification is sent to the NCCN MSL (Becky - east, Kim - west).</description>
        <inlineHelpText>Date field will populate when the email notification is sent to the NCCN MSL (Becky - east, Kim - west).</inlineHelpText>
        <label>MSL 1st Sample Notification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MSL_Cell__c</fullName>
        <description>Derived from Account&apos;s MSL</description>
        <label>MSL Cell</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MSL_Email__c</fullName>
        <description>Account MSL&apos;s email</description>
        <label>MSL Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MSL_Signature_First_Line__c</fullName>
        <description>Derived from MSL&apos;s Name + Degree fields.</description>
        <label>MSL Signature First Line</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSL__c</fullName>
        <label>MSL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matches_Identified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ENT-3977. Box is checked if sample has match records associated with it.</description>
        <label>Matches Identified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medicare_Coverage__c</fullName>
        <label>Medicare Coverage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_Coll_Date__c</fullName>
        <formula>CASE(MONTH(Blood_Collection_Date__c), 
1,&apos;JAN&apos;, 
2,&apos;FEB&apos;, 
3,&apos;MAR&apos;, 
4,&apos;APR&apos;, 
5,&apos;MAY&apos;, 
6,&apos;JUN&apos;, 
7,&apos;JUL&apos;, 
8,&apos;AUG&apos;, 
9,&apos;SEP&apos;, 
10,&apos;OCT&apos;, 
11,&apos;NOV&apos;, 
12,&apos;DEC&apos;, 
&apos;???&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Coll Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_Date_Recd__c</fullName>
        <description>Used for alphanumeric conversion</description>
        <formula>CASE(MONTH(Date_Received__c),
1,&apos;JAN&apos;,
2,&apos;FEB&apos;,
3,&apos;MAR&apos;,
4,&apos;APR&apos;,
5,&apos;MAY&apos;,
6,&apos;JUN&apos;,
7,&apos;JUL&apos;,
8,&apos;AUG&apos;,
9,&apos;SEP&apos;,
10,&apos;OCT&apos;,
11,&apos;NOV&apos;,
12,&apos;DEC&apos;,
&apos;???&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Date Recd</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_Date_Service__c</fullName>
        <description>Used for alphanumeric conversion</description>
        <formula>CASE(MONTH(Date_of_Service__c), 
1,&apos;JAN&apos;, 
2,&apos;FEB&apos;, 
3,&apos;MAR&apos;, 
4,&apos;APR&apos;, 
5,&apos;MAY&apos;, 
6,&apos;JUN&apos;, 
7,&apos;JUL&apos;, 
8,&apos;AUG&apos;, 
9,&apos;SEP&apos;, 
10,&apos;OCT&apos;, 
11,&apos;NOV&apos;, 
12,&apos;DEC&apos;, 
&apos;???&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Date Service</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_Final_Report__c</fullName>
        <description>Used for alphanumeric conversion</description>
        <formula>CASE(MONTH(Final_Report_Date__c), 
1,&apos;JAN&apos;, 
2,&apos;FEB&apos;, 
3,&apos;MAR&apos;, 
4,&apos;APR&apos;, 
5,&apos;MAY&apos;, 
6,&apos;JUN&apos;, 
7,&apos;JUL&apos;, 
8,&apos;AUG&apos;, 
9,&apos;SEP&apos;, 
10,&apos;OCT&apos;, 
11,&apos;NOV&apos;, 
12,&apos;DEC&apos;, 
&apos; &apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Final Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_Year__c</fullName>
        <formula>Month_Date_Recd__c +&quot;-&quot; + TEXT(Year(Date_Received__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Month and Year the sample was received.</inlineHelpText>
        <label>Month-Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCCN_East__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCCN East</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCCN_Sample_Reported_Email_Sent__c</fullName>
        <label>NCCN Sample Reported Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NCCN_Sample__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCCN Sample</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCCN_West__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCCN West</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCI_East__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCI East</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCI_Email_Sent__c</fullName>
        <label>NCI Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NCI_NCCN_Region__c</fullName>
        <description>Hidden field used for reports. If a sample is either NCCN or NCI, this determines its region, East or West. Default is East if there are conflicts.</description>
        <formula>CASE((West__c &amp; East__c), &quot;Westno&quot;, &quot;West&quot;,&quot;noEast&quot;,&quot;East&quot;,&quot;WestEast&quot;, &quot;East&quot;,&quot;non-aligned&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NCI/NCCN Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCI_Sample__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCI Sample</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCI_West__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCI West</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_Derived_Length__c</fullName>
        <formula>LEN( Name_Derived__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Derived Length</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_Derived__c</fullName>
        <description>Removes breaks/spaces from Name field to allow use in processes. See https://success.salesforce.com/issues_view?id=a1p300000008YkZAAU</description>
        <formula>TRIM( Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Derived</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_International_Report_Released__c</fullName>
        <label>New International Report Released</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Ordering_MD__c</fullName>
        <formula>IF(Previous_Date_Received_Contact__c&gt;(TODAY()-366), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden field. &apos;1&apos; if field &apos;Previous Date Received Contact&apos; is less than Today - 366 (i.e., if the contact&apos;s last order was over a year ago) or blank</inlineHelpText>
        <label>New Ordering MD?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_York_Sample__c</fullName>
        <formula>Contact__r.New_York_Sample__c=TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New York Sample</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Alt_Email_Sent__c</fullName>
        <label>No Alt Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Alt_Email_Sent_to_Physician__c</fullName>
        <description>Used to identify when the No Alt workflow sent an email to a physician.</description>
        <label>No Alt Email Sent to Physician</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Numbers_of_months_between_samples__c</fullName>
        <formula>IF( 
( TODAY() -     Previous_Date_Received_Contact__c     ) / 365 * 12 &lt; 1, 1, ( TODAY() -     Previous_Date_Received_Contact__c     ) / 365 * 12 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numbers of months between samples</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OMD_Country__c</fullName>
        <formula>Contact__r.OMD_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Two-letter country code. OMD = &apos;Ordering MD&apos;. Entered on the Physician record.</inlineHelpText>
        <label>OMD Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Off_Label__c</fullName>
        <inlineHelpText>N/A =  No Alteration found or Alteration was found and the sample was NOT submitted to N of 1.</inlineHelpText>
        <label>Off Label</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>On_Label__c</fullName>
        <inlineHelpText>N/A =  No Alteration found or Alteration was found and the sample was NOT submitted to N of 1.</inlineHelpText>
        <label>On Label</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outreach_Email_Auto_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>TRUE if initial outreach email was auto-sent.</inlineHelpText>
        <label>Outreach Email Auto-sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Email__c</fullName>
        <formula>Sample_Owner__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI__c</fullName>
        <description>Hidden on Samples; this field is added to be visible on Match Records</description>
        <formula>Contact__r.PI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PI?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POD_Date__c</fullName>
        <label>POD Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patient_Age__c</fullName>
        <formula>Patient__r.Age__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_Case_Safe_ID__c</fullName>
        <formula>Patient__r.CASESAFEID_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Gender__c</fullName>
        <formula>TEXT(Patient__r.Gender__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Last_Name__c</fullName>
        <formula>Case(
LIMS_Project_ID__c,
&apos;lunar1_e2e&apos;,Patient__r.Last_Name__c,
&apos;NRG_01&apos;,Patient__r.Last_Name__c,
&apos;GOZ_01&apos;, Patient__r.Last_Name__c,
&apos;AZN_33&apos;, Patient__r.Last_Name__c,
&apos;SUC_01&apos;, Patient__r.Last_Name__c,
&apos; &apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Last_Sample_Date__c</fullName>
        <formula>Patient__r.Last_Sample_Recd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Last Sample Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patient_Test_Count__c</fullName>
        <description>Rank order of sample by the same patient</description>
        <inlineHelpText>This field indicates how many samples (across all request types) were ordered for this Patient when this sample was ordered. This field rolls up the patient’s test count by SFDC Patient ID if available.</inlineHelpText>
        <label>Patient Test Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_Test_Number__c</fullName>
        <label>Patient Test Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipName>Guardant_360_Samples</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patient_received_bill_from_Xifin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Patient received bill from Xifin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Teir_del__c</fullName>
        <label>Payment Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bill Client</fullName>
                </value>
                <value>
                    <fullName>HIP/KOL</fullName>
                </value>
                <value>
                    <fullName>Lung/Super High</fullName>
                </value>
                <value>
                    <fullName>Lung/Super Low</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Physician_1st_F_U__c</fullName>
        <formula>Contact__r.UE_1st_Follow_Up_Sent__c</formula>
        <label>Physician 1st F/U</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Physician_1st_Lung__c</fullName>
        <formula>Contact__r.UE_1st_Lung_Email_Sent__c</formula>
        <label>Physician 1st Lung</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Physician_2nd_F_U__c</fullName>
        <formula>Contact__r.UE_2nd_Follow_Up_Sent__c</formula>
        <label>Physician 2nd F/U</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Physician_2nd_Lung__c</fullName>
        <formula>Contact__r.UE_Last_Lung_Email_Sent__c</formula>
        <label>Physician 2nd Lung</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Physician_Name__c</fullName>
        <formula>Contact__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physician Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physician_SL_Percent__c</fullName>
        <label>Physician SL Percent</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Physician_s_First_Sample_Date__c</fullName>
        <description>Comes from Contact record.</description>
        <formula>Contact__r.First_Sample_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physician&apos;s First Sample Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Physician_s_NPI__c</fullName>
        <formula>Contact__r.Actual_NPI__r.NPI_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physician&apos;s NPI #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Link_for_MD__c</fullName>
        <formula>HYPERLINK(&quot;https://portal.guardanthealth.com/r/&quot; &amp; Name  ,&quot;https://portal.guardanthealth.com/r/&quot; &amp;  Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portal Link for MD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Primary_Email_Address__c</fullName>
        <label>Portal Primary Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Portal_Quaternary_Email_Address__c</fullName>
        <label>Portal Quaternary Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Portal_Quinary_Email_Address__c</fullName>
        <label>Portal Quinary Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Portal_Secondary_Email_Address__c</fullName>
        <label>Portal Secondary Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Portal_Senary_Email_Address__c</fullName>
        <label>Portal Senary Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Portal_Tertiary_Email_Address__c</fullName>
        <label>Portal Tertiary Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Post_Event_Sample__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Event Sample</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Date_Received_Contact__c</fullName>
        <label>Previous Date Received (Contact)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_ICD_Code_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary ICD Code Lookup</label>
        <referenceTo>ICD_Code__c</referenceTo>
        <relationshipName>Guardant_360_Samples</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_ICD_Code__c</fullName>
        <label>Primary ICD Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_PayorID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Primary Ins Co Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Payor Account</value>
            </filterItems>
            <infoMessage>Primary Payor ID Name will be displayed.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Guardant Samples (Primary PayorID)</relationshipLabel>
        <relationshipName>Primary_PayorID</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promotion_Code__c</fullName>
        <label>Promotion Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Replied_to_1st_Result_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provider Replied to 1st Result Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pt_Benefits_Authorization__c</fullName>
        <label>Patient Benefits Authorization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Old TRF</fullName>
                </value>
                <value>
                    <fullName>Missing TRF</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
                <value>
                    <fullName>Unsigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pt_DOB__c</fullName>
        <label>Pt. DOB</label>
        <length>10</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Pt_First_Name__c</fullName>
        <label>Pt. First Name</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Pt_Last_Name__c</fullName>
        <label>Pt. Last Name</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Pt_No_of_tests__c</fullName>
        <formula>Patient__r.Number_of_Samples__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula used to bring over the Number of Samples value from Patient record</inlineHelpText>
        <label>Pt No of tests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qualifies_for_Outreach_Email_Auto_send__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qualifies for Outreach Email Auto-send?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualifying_Target_Genes__c</fullName>
        <label>MR Qualifying Target Genes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quarter_Received__c</fullName>
        <formula>(CASE(
    Sample_Month__c,
    1,
    &apos;Q1&apos;,
    2,
    &apos;Q1&apos;,
    3,
    &apos;Q1&apos;,
    4,
    &apos;Q2&apos;,
    5,
    &apos;Q2&apos;,
    6,
    &apos;Q2&apos;,
    7,
    &apos;Q3&apos;,
    8,
    &apos;Q3&apos;,
    9,
    &apos;Q3&apos;,
    10,
    &apos;Q4&apos;,
    11,
    &apos;Q4&apos;,
    12,
    &apos;Q4&apos;,
    &apos;&apos;
  ) &amp; &quot;-&quot; &amp; TEXT(Year_Received__c))</formula>
        <inlineHelpText>Fiscal Quarter of the Sample Date</inlineHelpText>
        <label>Quarter Received</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSD_Email__c</fullName>
        <label>RSD Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Received_this_month__c</fullName>
        <formula>CASE(YEAR(Date_Received__c),
 YEAR(TODAY()), MONTH(TODAY())-Sample_Month__c,
 YEAR(TODAY())-1,12-(Sample_Month__c-MONTH(TODAY())),
 YEAR(TODAY())-2,24-(Sample_Month__c-MONTH(TODAY())),
 YEAR(TODAY())-3,36-(Sample_Month__c-MONTH(TODAY())),
 48)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of months ago sample was received. &apos;0&apos; = received this month</inlineHelpText>
        <label>Received this month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type_ID__c</fullName>
        <formula>RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relevant_Clinical_History_Confirmed__c</fullName>
        <label>Relevant Clinical History Confirmed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Link__c</fullName>
        <formula>&quot;https://portal.guardanthealth.com/download_report/admin_download?request_id=&quot; &amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Study_ID__c</fullName>
        <label>Request Study ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Merati</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pharma</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>SWOG</fullName>
                </value>
                <value>
                    <fullName>Validation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_type_selected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NS:08/06/17 This check box is used for the Process Builder - Sample:Notify the Sales Operation When Research or Clinical Sample submitted.</description>
        <label>Request type selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Run_Process__c</fullName>
        <description>Name of the process to be run. Updated through the scheduled record update tool.</description>
        <label>Run Process</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAC_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SC Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SL_Notification_1__c</fullName>
        <label>SL Notification 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SL_Notification_2__c</fullName>
        <label>SL Notification 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SL_Notification_3__c</fullName>
        <label>SL Notification 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SOW_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will update the SOW field to the value in the &apos;Current SOW&apos; field on the associated Project ID.</inlineHelpText>
        <label>SOW Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SOW__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SOW</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SOW__c.LIMS_Project_ID__c</field>
                <operation>equals</operation>
                <valueField>$Source.LIMS_Project_ID_lookup__c</valueField>
            </filterItems>
            <infoMessage>The SOW must be linked to the Project ID.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>SOW__c</referenceTo>
        <relationshipLabel>Guardant Samples</relationshipLabel>
        <relationshipName>Guardant_Samples</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <formula>TEXT(Sample_Owner__r.Territory__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Derived from Territory field on Sample Owner.</inlineHelpText>
        <label>Sample Owner Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SampleCounter__c</fullName>
        <description>Deprecate</description>
        <label>Sample Counter</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sample_Aging__c</fullName>
        <formula>IF(ISBLANK(Final_Report_Date__c),TODAY()- Date_Received__c ,
(Final_Report_Date__c) - (Date_Received__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sample Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sample_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sample Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sample_Do_Not_Send_IOE__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Marks samples that should not have IOEs sent for any of their matches</inlineHelpText>
        <label>Sample Do Not Send IOE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sample_Fax_Number__c</fullName>
        <label>Sample Fax Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Flag__c</fullName>
        <formula>AND(
Final_Report_Date__c&gt;Last_Sample_Recd_Contact__c,
Date_Received__c&lt;&gt;Last_Sample_Recd_Contact__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Flag for First Time Tester report. If box is checked, the MD has submitted another sample before this one was finalized.</inlineHelpText>
        <label>Sample Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sample_Month__c</fullName>
        <formula>MONTH( Date_Received__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sample Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sample_Off_label_IOE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Box is checked if match record generated from sample is not for an on-label trial (i.e. VITRAKVI)</description>
        <label>Sample Off-label IOE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sample_On_Label_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Box is checked when a match generated by the sample is eligible for on-label IOE, e.g. Bayer VITRAKVI study. Modified by process &apos;Match: Outreach Email&apos;.</inlineHelpText>
        <label>Sample On-Label IOE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sample_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sample Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Guardant_360_Samples</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_ICD_Code_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary ICD Code Lookup</label>
        <referenceTo>ICD_Code__c</referenceTo>
        <relationshipName>Guardant_360_Samples1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_ICD_Code__c</fullName>
        <label>Secondary ICD Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>